# Labs-AyED2

./: .gitignore
Laboratorios/: CMakeLists.txt
Laboratorios/Lab 0/lab00/: bounds.c  tictactoe_gen4.c  tictactoe_gen5  tictactoe_gen5.c
Laboratorios/Lab 1/ej1/: main.c
Laboratorios/Lab 1/ej2/: main.c
Laboratorios/Lab 1/ej3/: array_helpers.c  array_helpers.h  main.c
Laboratorios/Lab 1/ej4/: array_helpers.c  array_helpers.h  main.c
Laboratorios/Lab 1/ej5/: array_helpers.c  array_helpers.h  main.c  mybool.h
Laboratorios/Lab 1/ej6/: array_helpers.c  array_helpers.h  main.c
Laboratorios/Lab 2/ej0/: fixstring.c  main.c
Laboratorios/Lab 2/ej1/: array_helpers.h  sort.c  sort_helpers.h
Laboratorios/Lab 2/ej2/: sort.c
Laboratorios/Lab 2/ej3/: main.c  sort.c  sort.h
Laboratorios/Lab 2/ej4/: main.c  sort.c
Laboratorios/Lab 2/ej5/: array_helpers.c  array_helpers.h  fixstring.c  main.c  sort.c  sort.h  sort_helpers.c
Laboratorios/Lab 3/ej1/: funtion.c  funtion.h  main.c
Laboratorios/Lab 3/ej2/: array_helpers.c  array_helpers.h  main.c  weather.c  weather_utils.c  weather_utils.h
Laboratorios/Lab 3/ej3/: sort.c  sort.h
Laboratorios/Lab 4/ej1/: main.c
Laboratorios/Lab 4/ej2/: abs1.c  abs2.c  swap.c
Laboratorios/Lab 4/ej3/: sort.c  sort.h
Laboratorios/Lab 4/ej6/: counter.c
Laboratorios/Lab 4/ej7/: .gdb_history  array_helpers.c  list.c  list.h  main.c
Laboratorios/Lab 5/ej2a/: main.c  stack.c  test.c
Laboratorios/Parcial 2/: kickstart_tema_b.tar
Laboratorios/Recuperatorio/: resolucion de gaspar saenz, sin leaks.c  resolucion.txt
(+92 files in other folders)
